website/versioned_docs/version-2.14.x/reference/subsystems/pylint.mdx
---
title: pylint
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Pylint linter for Python code (https://www.pylint.org/).

Backend: <span className="color--primary">`pants.backend.python.lint.pylint`</span>

Config section: <span className="color--primary">`[pylint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]pylint-skip`}
  env_repr="PANTS_PYLINT_SKIP"
  default_repr={`False`}
>
  If true, don&#x27;t use Pylint when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--pylint-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_PYLINT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Pylint, e.g.
  `--pylint-args='--ignore=foo.py,bar.py --disable=C0330,W0311'`.
</Option>

### `export`

<Option
  cli_repr={`--[no-]pylint-export`}
  env_repr='PANTS_PYLINT_EXPORT'
  default_repr={`True`}
>
If true, export a virtual environment with Pylint when running `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 export`.

This can be useful, for example, with IDE integrations to point your editor to the tool&#x27;s binary.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--pylint-version=<str>`}
  env_repr="PANTS_PYLINT_VERSION"
  default_repr={`pylint>=2.13.0,<2.15`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--pylint-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PYLINT_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--pylint-lockfile=<str>`}
  env_repr='PANTS_PYLINT_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.14.2/src/python/pants/backend/python/lint/pylint/pylint.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=pylint`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--pylint-console-script=<str>`}
  env_repr="PANTS_PYLINT_CONSOLE_SCRIPT"
  default_repr={`pylint`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--pylint-entry-point=<str>`}
  env_repr="PANTS_PYLINT_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--pylint-config=<file_option>`}
  env_repr='PANTS_PYLINT_CONFIG'
  default_repr={`None`}
>
Path to a config file understood by Pylint (http://pylint.pycqa.org/en/latest/user_guide/run.html#command-line-options).

Setting this option will disable `[pylint].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]pylint-config-discovery`}
  env_repr='PANTS_PYLINT_CONFIG_DISCOVERY'
  default_repr={`True`}
>
If true, Pants will include any relevant config files during runs (`.pylintrc`, `pylintrc`, `pyproject.toml`, and `setup.cfg`).

Use `[pylint].config` instead if your config is in a non-standard location.

</Option>

### `source_plugins`

<Option
  cli_repr={`--pylint-source-plugins="[<target_option>, <target_option>, ...]"`}
  env_repr='PANTS_PYLINT_SOURCE_PLUGINS'
  default_repr={`[]`}
>
An optional list of `python_sources` target addresses to load first-party plugins.

You must set the plugin&#x27;s parent directory as a source root. For example, if your plugin is at `build-support/pylint/custom_plugin.py`, add &#x27;build-support/pylint&#x27; to `[source].root_patterns` in `pants.toml`. This is necessary for Pants to know how to tell Pylint to discover your plugin. See https://www.pantsbuild.org/v2.14/docs/source-roots

You must also set `load-plugins=$module_name` in your Pylint config file.

While your plugin&#x27;s code can depend on other first-party code and third-party requirements, all first-party dependencies of the plugin must live in the same directory or a subdirectory.

To instead load third-party plugins, set the option `[pylint].extra_requirements` and set the `load-plugins` option in your Pylint config.

Tip: it&#x27;s often helpful to define a dedicated &#x27;resolve&#x27; via `[python].resolves` for your Pylint plugins such as &#x27;pylint-plugins&#x27; so that the third-party requirements used by your plugin, like `pylint`, do not mix with the rest of your project. Read that option&#x27;s help message for more info on resolves.

</Option>

## Deprecated options

None

</span>

